...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mn2-ku-8W2">
                                <rect key="frame" x="97" y="216" width="183" height="40"/>
                                <color key="backgroundColor" red="0.12627797153658793" green="0.66596449607329844" blue="0.045142230385301706" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="addOne">
                                    <color key="titleColor" red="0.15053129996826997" green="0.23491026775283275" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="tapBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QGT-AP-YHI"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="27" y="371" width="382" height="200"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q71-66-ogh">
                                <rect key="frame" x="260" y="54" width="80" height="30"/>
                                <color key="backgroundColor" red="0.71412794502617793" green="0.071811176804821228" blue="0.067715141221382322" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="showAlert">
                                    <color key="titleColor" red="0.0023723821989528604" green="0.000457537887082545" blue="0.002030521920291331" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="showAlertView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4d5-im-FNZ"/>
                                </connections>
                            </button>
...
